--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,3 @@
-org: strutive07
-app: codepipeline-slack-notifier
 # Welcome to Serverless!
 #
 # This file is the main config file for your service.
@@ -21,7 +19,7 @@ environment:
 provider:
   name: aws
   runtime: python3.6
-  region: ap-northeast-2
+  region: eu-west-1
   stage: ${env:stage}
   deploymentBucket: ${env:s3_bucket}
 
@@ -37,7 +35,6 @@ provider:
       Resource: '*'
 
   environment:
-    SLACK_TOKEN: ${env:SLACK_TOKEN}
     SLACK_BOT_TOKEN: ${env:SLACK_BOT_TOKEN}
     SLACK_BOT_NAME: ${env:SLACK_BOT_NAME}
     SLACK_BOT_ICON: ${env:SLACK_BOT_ICON}
